--- a/package.json
+++ b/package.json
@@ -11,23 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.5",
-    "@angular/common": "^11.0.5",
-    "@angular/compiler": "^11.0.5",
-    "@angular/core": "^11.2.18",
-    "@angular/forms": "^11.0.5",
-    "@angular/platform-browser": "^11.0.5",
-    "@angular/platform-browser-dynamic": "^11.0.5",
-    "@angular/router": "^11.0.5",
+    "@angular/animations": "11.2.14",
+    "@angular/common": "11.2.14",
+    "@angular/compiler": "11.2.14",
+    "@angular/core": "11.2.14",
+    "@angular/forms": "11.2.14",
+    "@angular/platform-browser": "11.2.14",
+    "@angular/platform-browser-dynamic": "11.2.14",
+    "@angular/router": "11.2.14",
     "bootstrap": "3.3.7",
-    "rxjs": "6",
-    "rxjs-compat": "^6.6.7",
-    "tslib": "^2.0.3",
-    "zone.js": "^0.10.3"
+    "rxjs": "6.5.3",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.4",
-    "@angular/cli": "^11.0.4",
+    "@angular/cli": "^11.2.18",
     "@angular/compiler-cli": "^11.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
